layout bug fixes and better placeholders

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,7 @@ html {
   justify-content: space-between;
 }
 
-/* postion */
+/* position */
 .fixed {
   position: fixed;
 }
@@ -388,14 +388,15 @@ html {
 .z-1 {
   z-index: 1;
 }
-
 .z-5 {
   z-index: 5;
 }
 .z-10 {
   z-index: 10;
 }
-
+.z-15 {
+  z-index: 15;
+}
 
 /* custom */
 .link-overlay {
